# new_MoreFile

./: .env  app.py  config.py  db_2.py  db_3.py  db_config.py  functions.py  idpass.py  luckynumber.py  morefile.sqlite  pass.py  peewee_db.sqlite  pyproject.toml
static/: style.css
templates/: choice.html  idpass.html  index.html  introchoice.html  introduce.html  introtemplate.html  myprofile.html  profile.html  question.html  rirekisyo.html
