[tool.poetry]
name = "new_morefile"
version = "0.1.0"
description = ""
authors = ["yaaashi84 <yaaaashi.84@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
peewee = "^3.15.0"
python-dotenv = "^0.20.0"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
